--- a/ET-Mariphilia/minecraft/resources/contenttweaker/lang/en_us.lang
+++ b/ET-Mariphilia/minecraft/resources/contenttweaker/lang/en_us.lang
@@ -27,3 +27,90 @@ item.contenttweaker.apple_seed.name=Apple Seed
 
 fluid.aquae_cinere=Aquae Cinere
 fluid.corrosive_liquid=Corrosive Liquid
+
+base.material.iron=铁
+base.material.copper=铜
+base.material.tin=锡
+base.material.bronze=青铜
+base.material.dawnstone=黎明石
+base.material.electrum=琥珀金
+base.material.gold=金
+base.material.lead=铅
+base.material.silver=银
+base.material.nickel=镍
+base.material.aluminum=铝
+base.material.certus_quartz=赛特斯石英
+base.material.nether_quartz=下界石英
+base.material.ashen_metal=灰烬金属
+base.material.mithril=秘银
+base.material.compressed_ash_metal=压缩灰烬金属
+base.material.biopolymer_material=生物聚合材料
+base.material.superconductium=超导金属
+base.material.zero_ash_metal=零点灰烬金属
+base.material.graphene=石墨烯
+base.material.neutron=中子材料
+base.material.pure_neptunium=高纯镎
+base.material.dimensional_metal=维度金属
+
+contenttweaker.part.part_axe=%s斧头
+contenttweaker.part.part_pickaxe=%s镐头
+contenttweaker.part.part_hoe=%s锄头
+contenttweaker.part.part_sword=%s剑刃
+contenttweaker.part.part_shovel=%s铲头
+
+stage.removal.message=%s 已结束
+stage.add.message=超频时间结束
+
+etm.research.ashenology.title=灰烬学
+etm.research.ashenology.description=从灰烬中衍生出的无尽奥妙，由灰烬能量支撑的工业体系...灰烬学中蕴含着无尽的可能。试着研究一些蕴含着大量灰烬能量的材料吧。
+
+etm.research.basic_materials_science.title=基础材料学
+etm.research.basic_materials_science.description=从炼金仪式中创造出的诸多元素也许蕴含着物质的奥秘？试着对这些不同的材料研究来获得新的进展吧。
+
+etm.research.basic_IT.title=基础信号学
+etm.research.basic_IT.description=在拥有了更强，更耐热，更导电的材料之后，你也许可以通过组合从滤网中获得的神秘红色粉末与灰烬金属来传递信号？
+
+etm.research.advanced_IT.title=进阶信号学
+etm.research.advanced_IT.description=灰烬能量二极管很好——但唯独在处理更复杂，更庞大的信号时有些应接不暇——也许改进它能够获得别样的惊喜？
+
+etm.research.basic_logistics.title=基础物流学
+etm.research.basic_logistics.description=新型材料能够为更多的物流设备提供更持久的运行时间——也许是时候拾起漏斗和储物桶了？
+
+etm.research.advanced_logistics.title=进阶物流学
+etm.research.advanced_logistics.description=漏斗显然无法为你庞大的物流系统提供有效的支持了——研究物品运送的系统来学习如何制作并使用管道吧；别忘了，更高的物流效率也意味着更大的空间利用率——升级你的板条箱们吧。
+
+etm.research.biology.title=生物学
+etm.research.biology.description=在被阴暗处凭空生成的怪物惊讶后，你不禁打起了在这个新世界种植作物的想法——作物永远是食物的第一有效来源。
+
+etm.research.botany.title=植物学
+etm.research.botany.description=你不满足于单一的小麦作为食物来源——也许炼金学能够为这个世界带来更多生机。
+
+etm.research.zoology.title=动物学
+etm.research.zoology.description=植物中蕴含着生命的奥秘——至少你是这么觉得的。也许跟自己身体的一部分相结合能够做出与上帝比肩的壮举？
+
+etm.research.basic_mobiology.title=基础怪物学
+etm.research.basic_mobiology.description=手动刷怪塔的效率已经满足不了你了——你急需更有效率的处决怪物的方法；研究怪物遗骸也许可以洞悉它们的弱点。
+
+etm.research.basic_electricity.title=基础电学
+
+etm.research.turbo.title=机械-灰烬能量涡轮
+
+etm.research.centrifuge.title=机械-大型离心机
+
+etm.research.assembler.title=机械-装配机
+
+etm.research.logistic_IT.title=物流信号学
+
+etm.research.med_lab.title=机械-医药实验室
+
+etm.research.compressor.title=机械-灰烬能量真空压缩机
+
+etm.research.advanced_materials_science.title=进阶材料学
+
+etm.research.advanced_electricity.title=进阶电学
+
+etm.research.advanced_mobiology.title=进阶怪物学
+
+etm.research.automation.title=自动化
+
+etm.research.spacialogy.title=空间学
