锇增产，第四章研究初始化

--- a/ET-Mariphilia/minecraft/resources/contenttweaker/lang/zh_cn.lang
+++ b/ET-Mariphilia/minecraft/resources/contenttweaker/lang/zh_cn.lang
@@ -165,3 +165,21 @@ etm.research.automation.description=
 
 etm.research.spacialogy.title=空间学
 etm.research.spacialogy.description=
+
+etm.research.atomic_materials_science.title=分子材料学
+etm.research.atomic_materials_science.description=
+
+etm.research.high_energy_physics.title=高能物理学
+etm.research.high_energy_physics.description=
+
+etm.research.standard_ashenolgy.title=标准灰烬学
+etm.research.standard_ashenolgy.description=
+
+etm.research.standard_mobiology.title=标准怪物学
+etm.research.standard_mobiology.description=
+
+etm.research.quark_materials_science.title=夸克材料学
+etm.research.quark_materials_science.description=
+
+etm.research.philosphy.title=哲学
+etm.research.philosphy.description=
