--- a/ET-Mariphilia/minecraft/resources/contenttweaker/lang/zh_cn.lang
+++ b/ET-Mariphilia/minecraft/resources/contenttweaker/lang/zh_cn.lang
@@ -30,6 +30,7 @@ item.contenttweaker.life_essence.name=生命精华
 item.contenttweaker.essencial_blood.name=一滴精血
 item.contenttweaker.grass_seeds.name=草种
 item.contenttweaker.drug.name=智慧透支药物
+item.contenttweaker.medicine.name=智慧提升药物
 item.contenttweaker.stanene.name=锡烯
 //EXPERIMENTAL DATA
 item.contenttweaker.pressure_meter.name=压力计
