第四章初步完成

--- a/ET-Mariphilia/minecraft/resources/contenttweaker/lang/en_us.lang
+++ b/ET-Mariphilia/minecraft/resources/contenttweaker/lang/en_us.lang
@@ -24,6 +24,7 @@ item.contenttweaker.ember_diode.name=Ember Diode
 item.contenttweaker.ember_triode.name=Ember Triode
 item.contenttweaker.advanced_alchemy_knowledge.name=Advanced Alchemy Knowledge
 item.contenttweaker.apple_seed.name=Apple Seed
+item.contenttweaker.heart_of_atum.name=Heart Of Atum
 
 fluid.aquae_cinere=Aquae Cinere
 fluid.corrosive_liquid=Corrosive Liquid
