--- a/ET-Mariphilia/minecraft/resources/contenttweaker/lang/zh_cn.lang
+++ b/ET-Mariphilia/minecraft/resources/contenttweaker/lang/zh_cn.lang
@@ -51,6 +51,7 @@ item.contenttweaker.biodata_creeper.name=爬行者生物数据
 item.contenttweaker.biodata_self.name=人类生物数据
 item.contenttweaker.biodata_golem.name=傀儡生物数据
 item.contenttweaker.biodata_wither.name=凋零生物数据
+item.contenttweaker.heart_of_atum.name=阿图姆之心
 //STAMPS
 item.contenttweaker.stamp_pickaxe.name=镐头模具
 item.contenttweaker.stamp_axe.name=斧头模具
@@ -134,23 +135,8 @@ etm.research.basic_mobiology.description=手动刷怪塔的效率已经满足不
 etm.research.basic_electricity.title=基础电学
 etm.research.basic_electricity.description=
 
-etm.research.turbo.title=机械-灰烬能量涡轮
-etm.research.turbo.description=
-
-etm.research.centrifuge.title=机械-大型离心机
-etm.research.centrifuge.description=
-
-etm.research.assembler.title=机械-装配机
-etm.research.assembler.description=
-
 etm.research.logistic_IT.title=物流信号学
 etm.research.logistic_IT.description=
-
-etm.research.med_lab.title=机械-医药实验室
-etm.research.med_lab.description=
-
-etm.research.compressor.title=机械-灰烬能量真空压缩机
-etm.research.compressor.description=
 
 etm.research.advanced_materials_science.title=进阶材料学
 etm.research.advanced_materials_science.description=
@@ -184,3 +170,27 @@ etm.research.quark_materials_science.description=
 
 etm.research.philosphy.title=哲学
 etm.research.philosphy.description=
+
+etm.research.turbo.title=机械-灰烬能量涡轮
+etm.research.turbo.description=
+
+etm.research.centrifuge.title=机械-大型离心机
+etm.research.centrifuge.description=
+
+etm.research.assembler.title=机械-装配机
+etm.research.assembler.description=
+
+etm.research.med_lab.title=机械-医药实验室
+etm.research.med_lab.description=
+
+etm.research.compressor.title=机械-灰烬能量真空压缩机
+etm.research.compressor.description=
+
+etm.research.aggregator.title=机械-深海物质聚集器
+etm.research.aggregator.description=
+
+etm.research.electric_coil.title=机械-电磁实验装置
+etm.research.electric_coil.description=
+
+etm.research.subdimensional_well.title=机械-亚次元钻井
+etm.research.subdimensional_well.description=
