--- a/ET-Mariphilia/minecraft/resources/contenttweaker/lang/zh_cn.lang
+++ b/ET-Mariphilia/minecraft/resources/contenttweaker/lang/zh_cn.lang
@@ -58,6 +58,30 @@ item.contenttweaker.stamp_axe.name=斧头模具
 item.contenttweaker.stamp_sword.name=剑刃模具
 item.contenttweaker.stamp_shovel.name=铲头模具
 item.contenttweaker.stamp_hoe.name=锄头模具
+//NOTES
+item.contenttweaker.note_stage_1.name=研究笔记-灰烬学
+item.contenttweaker.note_stage_2.name=研究笔记-基础材料学
+item.contenttweaker.note_stage_3.name=研究笔记-基础信号学
+item.contenttweaker.note_stage_4.name=研究笔记-进阶信号学
+item.contenttweaker.note_stage_5.name=研究笔记-基础物流学
+item.contenttweaker.note_stage_6.name=研究笔记-进阶物流学
+item.contenttweaker.note_stage_7.name=研究笔记-生物学
+item.contenttweaker.note_stage_8.name=研究笔记-植物学
+item.contenttweaker.note_stage_9.name=研究笔记-基础怪物学
+item.contenttweaker.note_stage_10.name=研究笔记-动物学
+item.contenttweaker.note_stage_11.name=研究笔记-进阶材料学
+item.contenttweaker.note_stage_12.name=研究笔记-基础电学
+item.contenttweaker.note_stage_13.name=研究笔记-物流信号学
+item.contenttweaker.note_stage_14.name=研究笔记-进阶电学
+item.contenttweaker.note_stage_15.name=研究笔记-空间学
+item.contenttweaker.note_stage_16.name=研究笔记-自动化
+item.contenttweaker.note_stage_17.name=研究笔记-进阶怪物学
+item.contenttweaker.note_stage_18.name=研究笔记-分子材料学
+item.contenttweaker.note_stage_19.name=研究笔记-高能物理学
+item.contenttweaker.note_stage_20.name=研究笔记-标准灰烬学
+item.contenttweaker.note_stage_21.name=研究笔记-标准怪物学
+item.contenttweaker.note_stage_22.name=研究笔记-夸克材料学
+item.contenttweaker.note_stage_23.name=研究笔记-哲学
 
 fluid.aquae_cinere=灰烬水
 fluid.corrosive_liquid=腐蚀性液体
